# wasserstein-for-persistence-tda

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: benchmark.py  test_maching.py  vtu_to_csv.py
examples/CSV/AsteroidDgms/: AsteroidDgm0.csv  AsteroidDgm1.csv  AsteroidDgm10.csv  AsteroidDgm11.csv  AsteroidDgm12.csv  AsteroidDgm13.csv  AsteroidDgm14.csv  AsteroidDgm15.csv  AsteroidDgm16.csv  AsteroidDgm17.csv  AsteroidDgm18.csv  AsteroidDgm19.csv  AsteroidDgm2.csv  AsteroidDgm3.csv  AsteroidDgm4.csv  AsteroidDgm5.csv  AsteroidDgm6.csv  AsteroidDgm7.csv  AsteroidDgm8.csv  AsteroidDgm9.csv
examples/CSV/DarkMatterDgms/: DarkMatterDgm0.csv  DarkMatterDgm1.csv  DarkMatterDgm10.csv  DarkMatterDgm11.csv  DarkMatterDgm12.csv  DarkMatterDgm13.csv  DarkMatterDgm14.csv  DarkMatterDgm15.csv  DarkMatterDgm16.csv  DarkMatterDgm17.csv  DarkMatterDgm18.csv  DarkMatterDgm19.csv  DarkMatterDgm2.csv  DarkMatterDgm20.csv  DarkMatterDgm21.csv  DarkMatterDgm22.csv  DarkMatterDgm23.csv  DarkMatterDgm24.csv  DarkMatterDgm25.csv  DarkMatterDgm26.csv  DarkMatterDgm27.csv  DarkMatterDgm28.csv  DarkMatterDgm29.csv  DarkMatterDgm3.csv  DarkMatterDgm4.csv  DarkMatterDgm5.csv  DarkMatterDgm6.csv  DarkMatterDgm7.csv  DarkMatterDgm8.csv  DarkMatterDgm9.csv
fast_auctions/: Cargo.toml  barycenter_test.py  benchmark.py  test_maching.py
fast_auctions/src/: auction.rs  barycenter.rs  kd_tree.rs  lib.rs
report/: Makefile  report.bbl  report.bib  report.tex
scripts/: vtu_to_csv.py
src/: auction.rs  binary_heap.rs  normal.rs  sort.rs
wasp/src/: descent.rs  lib.rs
(+143 files in other folders)
