[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wasp"
version = "0.1.0"
description = "Wasserstein Representation for Persistence Diagrams"
requires-python = ">=3.8"
dependencies = ["numpy>=1.20", "matplotlib>=3.3"]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
module-name = "wasp"

[dependency-groups]
dev = ["maturin>=1.0,<2.0"]
